bloonix-server (0.31) released at 2015-08-06

    * Heavy changes and code improvements.
    * Kicked sms* and mail* parameter.
    * Re-designed the notification handling.

bloonix-server (0.30) released at 2015-06-16

    * bloonix-update-agent-host-config now checks on a very simple
      way if sysvinit or systemctl must be used to restart the agent.

bloonix-server (0.29) released at 2015-06-16

    * Fixed @@LIBDIR@@ and clean up the wrong directory.

bloonix-server (0.28) released at 2015-06-10

    * Prevent to log FATAL messages with a stack trace if the
      request structure of the agent was invalid.
    * Implemented company.data_retention in bloonix-delete-es-host-data.

bloonix-server (0.27) released at 2015-05-08

    * Improved rest debugging.
    * Fixed uninitialized warnings messages.

bloonix-server (0.26) released at 2015-05-03

    * Removed location caching.

bloonix-server (0.25) released at 2015-04-15

    * Kicked default_locations.

bloonix-server (0.24) released at 2015-03-21

    * ProcManager and FCGI were splittet into 2 modules.
    * A lot of code improvement.

bloonix-server (0.23) released at 2015-03-11

    * Fixed missing function call for Bloonix::SwitchUser in
      bloonix-roll-forward-log.

bloonix-server (0.22) released at 2015-03-10

    * "INACIVE" typo fixed.

bloonix-server (0.21) released at 2015-03-10

    * Service and host actions (active, notification, acknowlegded)
      will now all reported.

bloonix-server (0.20) released at 2015-03-09

    * Nagios stats can now be parsed and stored.
    * ServiceChecker now except __DIE__.
    * Level of message 'no postdata received' changed to warning.
    * Path /srv/bloonix/server removed.
    * bloonix-roll-forward-log can now be executed as user bloonix
      and user root.
    * Force the status INFO for all services which are not OK
      if maintenance mode is active.

bloonix-server (0.19) released at 2015-02-16

    * Kicked sth_cache_enabled from database config.