@@ -1,3 +1,7 @@
+bloonix-server (0.32) released at 2015-08-15
+
+    * Bloonix::Server dies now if no /usr/sbin/sendmail is found.
+
 bloonix-server (0.31) released at 2015-08-06
 
     * Heavy changes and code improvements.
